--- a/EverestSplash/EverestSplash.csproj
+++ b/EverestSplash/EverestSplash.csproj
@@ -12,7 +12,7 @@
         <EmbeddedResource Include="..\lib-stripped\Celeste-icon.png">
             <LogicalName>%(EmbeddedResource.Identity)</LogicalName>
         </EmbeddedResource>
-        <EmbeddedResource Include="SplashContent\*">
+        <EmbeddedResource Include="SplashContent\**\*">
             <LogicalName>%(EmbeddedResource.Identity)</LogicalName>
         </EmbeddedResource>
         <!-- Only include this for standalone mode, MiniInstaller includes this same file -->
